--- a/index.html
+++ b/index.html
@@ -34,18 +34,26 @@
       <img src="images/cartells.svg?v=2">
       <div class="text">
         <p class="big">PTAs (Parents and Teachers Associations), in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand city officials greater street traffic pacification and safety of school environments, less pollution and less noise.</p>
-        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Last Friday, February 12th we were 63 mobilized schools, performing 52 roadblocks in three different cities. We are calling it the <a class="bold" href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a>. For February 26th we are hoping for other cities to join us. <b>Would you help us spread the word?</b></p>
-        <img src="/images/mapa-barcelona.jpg">
-        <h2 class="section">When will the next protests be?</h2>
-        <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: <b>February 26th</b>, <b>March 12th</b>, <b>March 26th</b>, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
-        <h2 class="section">What should you do to join?</h2>
-        <p>First of all, the PTA of your education centre should approve adding to the protest, in a meeting. Once approved, you will have to notify your city officials of the date, time and place of the roadblock. This way, it will be the city police that will cut traffic off, thus guaranteeing your safety.</p>
-        <p>Secondly, you must maximize the announcement of the day, time and place of the protest; both to the families of the school, as well as to the neighbours and neighbourhood organizations. In this link, you can adapt and download the poster that we are all using in the protest.</p>
+        <p>The protest started in Barcelona in December 2020, with 20 schools performing 17 roadblocks. It's been growing ever since! Last Friday, February 26th, the sixth consecutive day of protests, we were +75 mobilized schools in eight different cities. We are calling it the <a class="bold" href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a>.</p>
+        <p><b>It would be great if your PTA also joined, taking the protest to your city!</b></p>
         <div class="menu">
+          <div class="button">
+            <a href="https://drive.google.com/drive/folders/1-CGQHudTTMbAgWMP_LFG0WACp9TWw_JF" target="_blank" style="background: #E65D5B;">Read our guide</a>
+          </div>
           <div class="button">
             <a href="poster" style="background: #F28C27">Download the poster</a>
           </div>
+          <div class="button">
+            <a href="https://docs.google.com/forms/d/1dUgkXlcKB9--D3cn6XEInjizBcrXhbKlJGA2I7lLXbQ?hl=en" target="_blank" style="background: #F9B733;">Notify the protest</a>
+          </div>
         </div>
+        <!-- <img src="/images/mapa-barcelona-en.jpg"><br>
+        <img src="/images/mapa-madrid-en.jpg"> -->
+        <h2 class="section">When will the next protests be?</h2>
+        <p>It is important that we all go together to make a greater impact. Next Friday of protests is <b>May 7th</b>. Always on Friday, every 2 weeks, and at the time of school closure.</p>
+        <h2 class="section">What should you do to join?</h2>
+        <p>First of all, the PTA of your education centre should approve adding to the protest, in a meeting. Once approved, you will have to notify your city officials of the date, time and place of the roadblock. This way, it will be the city police that will cut traffic off, thus guaranteeing your safety.</p>
+        <p>Secondly, you must maximize the announcement of the day, time and place of the protest; both to the families of the school, as well as to the neighbours and neighbourhood organizations. In this link, you can adapt and download the poster that we are all using in the protest.</p>
         <p>One of the keys to the success of the <a href="https://twitter.com/search?q=%23schoolrebellion">#SchoolRebellion</a> is the day and time it takes place: Friday, after school. It is important that when the students leave the centre, the street is already closed. In this way, it will be very easy for families to add themselves to the protest. It encourages them if you accompany the protest with some festive activity: music, games, etc, as long as the Covid-19 prevention measures allow it.</p>
         <p>We also recommend, a few days before the protest, that you get together a few families (in the park, or in a school classroom) to prepare posters for the protest. You can make very cool posters with some cardboard and some markers. You can use messages like: "Less cars, more health!", "Less noise!", "Less pollution!", etc. Having banners and posters works very well to encourage families to participate, and in this way the photos that are later running through the networks and WhatsApp groups speak for themselves.</p>
         <p>In <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0">this link</a>, you can see some photos of our previous protests</p>
@@ -67,12 +75,159 @@
     </div>
     <div class="talls">
       <div class="inner">
-        <h2>51 roadblocks organized for<br>Friday, February 26 at 4:30 p.m.</h2>
-        <p><b>Barcelona:</b> Auró, Miralletes, Broggi, Diputació, Sagrada Família, Fructuós Gelabert, Octavio Paz, Els Llorers, Joan Miró, Institut Ernest Lluch, 9 Graons, Antoni Balmanya, Dovella, Torrent de Can Carabassa, Concepció, Rius i Taulet, Josep Maria Jujol, Ítaca, Anglesola, Voramar, Bogatell, Encants, Escola de les Aigües, Gaia, Jesuïtes Casp, Casas, Farigola, Arenal de Llevant, Ferran Sunyer, Fort Pienc, Pere Vila, Institut Pau Claris, Escola 30 passos, Mallorca, Pere IV, Institut Quatre Cantons, Claret, Auditori, Santa Anna, EBM El Fil, Pràctiques, Jaume I, EBM El Timbal, Pia Balmes, Tabor, Catalònia, Fluvià, Font d'en Fargas, Escola Poblenou, Torrent d'en Melis, Estel Guinardó, Bressol Montserrat, Rambleta del Clot, Ferdinand de Lesseps</b>
-        <p><b>Sabadell:</b> Enric Casassas, Samuntada, Joanot Alisenda, Nostra Llar.</p>
-        <p><b>Badalona:</b> Ventós Mir, Progrés, Badalona Port.</p>
-        <p><b>Sant Cugat:</b> Joan Maragall, Collserola.</p>
-        </p>
+        <h2>Schools involved on the protest:</h2>
+        <ol>
+          <h2 class="city">Badalona:</h2>
+          <li><u>Ventós Mir</u>: Industria amb Ignasi de Loiola.</li>
+          <li><u>Progrés</u>: Industria amb Providència.</li>
+          <li><u>Badalona Port</u>: Ponent amb Carrer Cervantes.</li>
+          <li><u>Gitanjali</u>: Martí Pujol.</li>
+
+          <h2 class="city">Barcelona:</h2>
+          <li><u>Auró</u>: Mallorca entre Urgell i Borrell (Eixample).</li>
+          <li><u>Miralletes</u> + <u>Broggi</u>: Indústria amb St. Quintí (Sant Martí).</li>
+          <li><u>Diputació</u>: Borrell amb Diputació (Eixample).</li>
+          <li><u>Sagrada Família</u> + <u>Fructuós Gelabert</u>: Sardenya amb Indústria (Gràcia i Eixample).</li>
+          <li><u>Octavio Paz</u>: Mallorca amb Biscai (Sant Andreu).</li>
+          <li><u>Els Llorers</u>: València entre Viladomat i Borrell (Eixample).</li>
+          <li><u>Joan Miró</u> + <u>Institut Ernest Lluch</u>: Entença amb Diputació (Eixample).</li>
+          <li><u>9 Graons</u>: Rosselló amb Roger de Flor (Eixample).</li>
+          <li><u>Antoni Balmanya</u>: Maria Claret amb Trinxant (Sant Martí).</li>
+          <li><u>Dovella</u>: Mallorca amb Muntanya (Sant Martí).</li>
+          <li><u>Torrent de Can Carabassa</u>: Llobregós (Horta-Guinardó).</li>
+          <li><u>Concepció</u>: Bruc entre València i Aragó (Eixample).</li>
+          <li><u>Ramon Llull</u>: Consell de Cent amb Sardenya (Eixample).</li>
+          <li><u>Rius i Taulet</u>: Maignon amb Vallcarca (Gràcia).</li>
+          <li><u>Josep Maria Jujol</u>: Riera de Sant Miquel (Gràcia).</li>
+          <li><u>Ítaca</u> + <u>Anglesola</u>: Numància amb Diagonal (Les Corts).</li>
+          <li><u>Voramar</u> + <u>Bogatell</u>: Badajoz amb Ramon Turró (Sant Martí).</li>
+          <li><u>Univers</u> + <u>Petit Univers</u>: Bailèn amb Travessera de Gràcia (Gràcia).</li>
+          <li><u>Encants</u>: Consell de Cent amb Cartagena (Eixample).</li>
+          <li><u>Xirinacs</u>: Entença amb Provença (Eixample).</li>
+          <li><u>Escola de les Aigües</u>: Taxdir amb Sardenya (Horta-Guinardó).</li>
+          <li><u>Gaia</u>: Consell de Cent amb Castillejos (Eixample).</li>
+          <li><u>Jesuïtes Casp</u>: Roger de Llúria amb Casp (Eixample).</li>
+          <li><u>Casas</u>: Clot Gran Via amb Sant Joan de Malta (Sant Martí).</li>
+          <li><u>Teixidores de Gràcia</u>: Escorial amb Encarnació (Gràcia).</li>
+          <li><u>Arenal de Llevant</u>: Bac de Roda amb Taulat (Sant Martí).</li>
+          <li><u>Ferran Sunyer</u>: Viladomat entre Parlament i Marqués de Campo Sagrado (Eixample).</li>
+          <li><u>Fort Pienc</u>: Alí Bei entre Sardenya i Nàpols (Eixample).</li>
+          <li><u>La Llacuna del Poblenou</u>: carrer Llacuna amb Pallars (Sant Martí).</li>
+          <li><u>Pere Vila</u> + <u>Institut Pau Claris</u>: passeig Lluís Companys (Ciutat Vella).</li>
+          <li><u>Pit-Roig</u> + <u>Arc Iris</u>: Alt de Pedrell (Horta-Guinardó).</li>
+          <li><u>Escola 30 passos</u>: Ferran Turné amb Berenguer de Palou (Sant Andreu).</li>
+          <li><u>Mallorca</u>: Londres entre Villaroel i Urgell (Eixample).</li>
+          <li><u>Pere IV</u> + <u>Institut Quatre Cantons</u>: Bilbao amb Pere IV.</li>
+          <li><u>Claret</u>: Maria Claret amb Sicília (Gracia).</li>
+          <li><u>Patronat Domenech</u>: Gran de Gràcia amb Nicolás Salmerón (Gracia).</li>
+          <li><u>Auditori</u>: Almogàvers entre Àlaba i Pamplona (Sant Martí).</li>
+          <li><u>Entença</u>: París, entre Viladomat i Comte Urgell (Eixample).</li>
+          <li><u>Santa Anna</u>: Bailén amb Diputació (Eixample).</li>
+          <li><u>EBM El Fil</u> + <u>Pràctiques</u> + <u>Jaume I</u> + <u>EBM El Timbal</u>: Numància entre Berlín i Robrenyo (Sants-Monjuïc).</li>
+          <li><u>Pia Balmes</u>: Travessera de Gràcia amb Balmes (Sarrià-Sant Gervasi).</li>
+          <li><u>Tabor</u>: Cartagena entre Mallorca i Provença (Eixample).</li>
+          <li><u>Catalònia</u>: Perú entre Selva de Mar i Fluvià (Sant Martí).</li>
+          <li><u>Fluvià</u>: Pujades amb Fluvià (Sant Martí).</li>
+          <li><u>Àngels Garriga</u>: Gallecs 22 (Horta-Guinardó).</li>
+          <li><u>Font d'en Fargas</u>: Pintor Pradilla (Horga-Guinardó).</li>
+          <li><u>Escola Poblenou</u>: Perú entre Espronceda i Bilbao (Sant Martí).</li>
+          <li><u>Torrent d'en Melis</u> + <u>Estel Guinardó</u> + <u>Bressol Montserrat</u>: Varsòvia amb Telègraf (Horta-Guinardó).</li>
+          <li><u>Rambleta del Clot</u>: Aragó 620 (Sant Martí).</li>
+          <li><u>Ferdinand de Lesseps</u>: Sicília amb Gran Via (Eixample).</li>
+          <li><u>Pau Casals de Gràcia</u>: Legalitat entre Alegre de Dalt i Pau Alsina (Gràcia).</li>
+          <li><u>La Farigola de Vallcarca</u>: Farigola entre Sant Càmil i Mare de Déu del Coll (Gràcia).</li>
+          <li><u>Carlit</u>: Roger de Flor entre Diputació i Consell de Cent (Eixample).</li>
+
+          <h2 class="city">Bilbao:</h2>
+          <li><u>Cervantes</u>: Lersundi 10.</li>
+
+          <h2 class="city">Cardedeu:</h2>
+          <li><u>Germans Corbella</u> + <u>Mil·lenari</u> + <u>Dolors Granés</u> + <u>Les Aigües</u> + <u> Can Manent</u> + <u>El Sui</u> + <u>Bressol Els Daus</u> + <u>Bressol Can Serra</u> + <u>Raspall</u> + <u>Institut Pla Marcell</u>: Plaça Joan Alsina</li>
+
+          <h2 class="city">Getafe:</h2>
+          <li><u>Miguel Hernández</u>: Calle Reyes Católicos.</li>
+
+          <h2 class="city">Girona:</h2>
+          <li><u>Àgora</u>: Passeig Ramon Berenguer II.</li>
+          <li><u>Joan Bruguera</u>: Artillers amb Bonastruc de Porta.</li>
+          <li><u>Pericot</u>: Andreu Tuyet i Santamaria</li>
+          <li><u>Montfalgars</u>: Montfalgars</li>
+          <li><u>Balandrau</u>: Carretera de Taialà entre rotondes de Fontajau i de Taialà</li>
+          <li><u>Annexa-Joan Puigbert</u>: Isabel La Catòlica, 24</li>
+          <li><u>El Bosc de la Pabordia</u>: Riera de Mus, 17</li>
+
+          <h2 class="city">Guadalajara:</h2>
+          <li><u>Liceo Caracense</u>: Teniente Figueroa, 6.</li>
+
+          <h2 class="city">Lugo:</h2>
+          <li><u>Rosalia de Castro</u>: Rua Cambria.</li>          
+
+          <h2 class="city">Madrid:</h2>
+          <li><u>Miguel de Unamuno</u>: Alicante 5 (Arganzuela).</li>
+          <li><u>Fernando el Católico</u>: Fernando el Católico 16 (Chamberí).</li>
+          <li><u>Asunción Rincón</u>: Filipinas 5, esquina Jesus Maestro (Chamberí).</li>
+          <li><u>Menéndez Pelayo</u>: Murcia / Rafael de Riego / Méndez Álvaro (Arganzuela).</li>
+          <li><u>Rufino Blanco</u>: General Álvarez de Castro, 10 (Chamberí).</li>
+          <li><u>Lope de Vega</u>: Inglaterra, 8 (Carabanchel).</li>
+          <li><u>Arcangel</u>: Titulcia entre Antonio Diaz Cañabate y Walia (Retiro).</li>
+          <li><u>Juan de Zaragüeta</u>: Tomás Redondo 4 (Hortaleza).</li>
+          <li><u>Palacio Valdes</u>: Almadén con Ceniceros (Centro).</li>
+          <li><u>La Melonera</u>: Eros 2 (Arganzuela).</li>
+          <li><u>El Almudena</u> + <u>Garcilaso de la Vega</u> + <u>Ramón Pérez de Ayala</u>: Motilla del Palancar (Hortaleza).</li>
+          <li><u>El Alba</u>: Toledo 181 (Arganzuela).</li>
+          <li><u>Vázquez de Mella</u>: Bailén 18 (Centro).</li>
+          <li><u>Ignacio Zuloaga</u>: Alejandro Rodríguez, 34 (Tetuán).</li>
+          <li><u>Méjico</u>: Carlota O’Neill (Ciudad Lineal).</li>
+          <li><u>San Eugenio y San Isidro</u>: Peñuelas (Arganzuela).</li>
+          <li><u>Claudio Moyano</u>: Cea Bermúdez 26 (Chamberí).</li>
+          <li><u>La Jara</u>: Hijas de Jesus (Usera).</li>
+          <li><u>Decroly</u>: Guzmán el Bueno 60 (Chamberí).</li>
+          <li><u>Luis Cernuda</u>: Puerto de Santa Maria 130 (Hortaleza).</li>
+          <li><u>Nuestra Señora de La Paloma</u>: Tabernillas 2 (Centro).</li>
+          <li><u>S.XXI</u>: Lituania 8 (Moratalaz).</li>
+          <li><u>San Benito</u>: Mariano Díaz Alonso (Ciudad Lineal).</li>
+          <li><u>La Latina</u>: Maqueda 130 (Latina).</li>
+          <li><u>Leopoldo Alas</u>: Pedrezuela 18.</li>
+          <li><u>Joaquín Rodrigo</u>: Casalarreina 28.</li>
+          <li><u>Zaleo</u>: Miguel Hernández 28.</li>
+          <li><u>Escuela Infantil Zofío</u>: Fornillos 3</li>
+          <li><u>Tirso de Molina</u>: Bronce 1</li>
+          
+          <h2 class="city">Melilla:</h2>
+          <li><u>León Solá</u>: Crta. Hidúm 64.</li>
+
+          <h2 class="city">Mollet del Vallès:</h2>
+          <li><u>Montseny</u>: Avinguda Badalona.</li>
+          <li><u>Aiguaviva</u></li>
+          <li><u>Sant Jordi</u></li>
+          <li><u>Can Besora</u></li>
+
+          <h2 class="city">Olot:</h2>
+          <li><u>Pla de Dalt</u>: Alforja.</li>              
+          
+          <h2 class="city">Sabadell</h2>
+          <li><u>Samuntada</u>: Pelai Briz.</li>
+          <li><u>Enric Casassas</u>: Carrer de les Paus amb Llobet.</li>     
+          <li><u>Nostra Llar</u>: Calderón entre Vallés i Ponent.</li>
+          <li><u>Joanot Alisanda</u>: Sallarés i Pla</li>
+          <li><u>La Trama</u>: Estrella</li>
+
+          <h2 class="city">Sant Cugat:</h2>
+          <li><u>Joan Maragall</u>: Passeig Sant Magí amb Rius i Taulet.</li>
+          <li><u>Collserola</u>: Abat Escarré.</li>
+          <li><u>Gerbert d´Horlac</u>: Josep Vicenç Foix.</li>
+
+          <h2 class="city">Valencia:</h2>
+          <li><u>Mare Nostrum</u>: Jose María de Haro con Blasco Ibañez.</li>
+
+          <h2 class="city">Vigo:</h2>
+          <li><u>Emilia Pardo Bazán "Chouzo"</u></li>
+
+          <h2 class="city">Zaragoza:</h2>
+          <li><u>Tenerias</u>: Plaza Tenerías.</li>
+          <li><u>San José de Calasanz</u>: Eduardo Salvador Hernaz, 43</li>
+          <li><u>Domingo Miral</u>: Mesones de Isuela</li>
+        </ol>
       </div>
     </div>
   </div>
