--- a/poster.html
+++ b/poster.html
@@ -15,7 +15,7 @@
   <script src="/shared/js/html2canvas.min.js"></script>
   <script src="/shared/js/canvas2image.js"></script>
   <script src="/shared/js/sticky-kit.min.js"></script>
-  <script src="/shared/application.js?v=8"></script>
+  <script src="/shared/application.js?v=9"></script>
 </head>
 <body class="tool">
   <div class="layout">
@@ -24,78 +24,36 @@
       <h1>DOWNLOAD THE POSTER:</h1>
       <p>This tool is in beta. Fill in the fields and download the image. If you end up with any issue, please reach us at <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a>.</p>
       <div class="row">
+        <label>Language:</label>
+        <div class="shopify-select">
+          <select data-location>
+            <option value="https://www.schoolrebellion.com/poster">English</option>
+            <option value="https://www.revueltaescolar.es/poster">Español</option>
+            <option value="https://www.rebelliondesecoles.fr/poster">Français</option>
+            <option value="https://www.revoltaescolar.cat/poster">Català</option>
+          </select>
+          <svg class="shopify-select-icon" viewBox="0 0 24 24"><path d="M21 5.176l-9.086 9.353L3 5.176.686 7.647 12 19.382 23.314 7.647 21 5.176z"></path></svg>
+        </div>
+      </div>
+      <div class="row">
         <label>Subtitle:</label>
-        <input type="text" data-target=".poster .subtitle" placeholder="we will be blocking Main Street">
+        <input type="text" data-target=".poster .subtitle" placeholder="we will be blocking Main Street" value="we will be blocking Main Street">
       </div>
       <div class="row">
         <label>Date:</label>
-        <div class="shopify-select">
-          <select data-target=".poster .date">
-            <option>Friday, February 26th</option>
-            <option>Friday, March 12th</option>
-            <option>Friday, March 26th</option>
-          </select>
-          <svg class="shopify-select-icon" viewBox="0 0 24 24"><path d="M21 5.176l-9.086 9.353L3 5.176.686 7.647 12 19.382 23.314 7.647 21 5.176z"></path></svg>
-        </div>
+        <input type="text" data-target=".poster .date" placeholder="Friday, May 7th" value="Friday, May 7th">
       </div>
       <div class="row">
         <label>Time:</label>
-        <div class="shopify-select">
-          <select data-target=".poster .time">
-            <option>10:00</option>
-            <option>10:15</option>
-            <option>10:30</option>
-            <option>10:45</option>
-            <option>11:00</option>
-            <option>11:15</option>
-            <option>11:30</option>
-            <option>11:45</option>
-            <option>12:00</option>
-            <option>12:15</option>
-            <option>12:30</option>
-            <option>12:45</option>
-            <option>13:00</option>
-            <option>13:15</option>
-            <option>13:30</option>
-            <option>13:45</option>
-            <option>14:00</option>
-            <option>14:15</option>
-            <option>14:30</option>
-            <option>14:45</option>
-            <option>15:00</option>
-            <option>15:15</option>
-            <option>15:30</option>
-            <option>15:45</option>
-            <option>16:00</option>
-            <option>16:15</option>
-            <option selected>16:30</option>
-            <option>16:45</option>
-            <option>17:00</option>
-            <option>17:15</option>
-            <option>17:30</option>
-            <option>17:45</option>
-            <option>18:00</option>
-          </select>
-          <svg class="shopify-select-icon" viewBox="0 0 24 24"><path d="M21 5.176l-9.086 9.353L3 5.176.686 7.647 12 19.382 23.314 7.647 21 5.176z"></path></svg>
-        </div>
+        <input type="text" data-target=".poster .time" placeholder="16:30 h" value="16:30 h">
       </div>
       <div class="row">
         <label>Location:</label>
-        <input type="text" data-target=".poster .location" maxlength="38" placeholder="Main Street between 3rd and 4rth">
+        <input type="text" data-target=".poster .location" placeholder="Main Street between 3rd and 4rth" value="Main Street between 3rd and 4rth">
       </div>
       <div class="row">
         <label>Duration:</label>
-        <div class="shopify-select">
-          <select data-target=".poster .duration">
-            <option>30 minutes</option>
-            <option>45 minutes</option>
-            <option>1 hour</option>
-            <option>2 hours</option>
-            <option>3 hours</option>
-            <option>4 hours</option>
-          </select>
-          <svg class="shopify-select-icon" viewBox="0 0 24 24"><path d="M21 5.176l-9.086 9.353L3 5.176.686 7.647 12 19.382 23.314 7.647 21 5.176z"></path></svg>
-        </div>
+        <input type="text" data-target=".poster .duration" placeholder="Duration: 30 minutes" value="Duration: 30 minutes">
       </div>
       <div class="row">
         <label>Organization entities logo:</label>
@@ -118,13 +76,13 @@
     <div class="right">
       <div class="container">
         <div class="poster">
-          <img class="background" src="/images/base-en.png">
+          <img class="background" src="/images/base-en.png?v=3">
           <div class="text subtitle">we will be blocking Main Street</div>
           <div class="text info">
-            <b><span class="date">Friday, February 26th</span></b><br>
-            <b><span class="time">16:30</span> h</b><br>
+            <b><span class="date">Friday, May 7th</span></b><br>
+            <b><span class="time">16:30 h</span></b><br>
             <span class="location">Main Street between 3rd and 4rth</span><br>
-            Duration: <span class="duration">30 minutes</span>
+            <span class="duration">Duration: 30 minutes</span>
           </div>
           <div class="logos">
             <div class="section summons">
